[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tensor-gpu"
version = "2.0.0"
description = "GPU-accelerated autograd tensor library built on CuPy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# numpy is always required; cupy wheel depends on your CUDA version —
# install the right one separately (see below).
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
# Install exactly one of these to match your CUDA toolkit version:
#   pip install -e ".[cuda11]"
#   pip install -e ".[cuda12]"
cuda11 = ["cupy-cuda11x>=11.0.0"]
cuda12 = ["cupy-cuda12x>=12.0.0"]

[tool.setuptools]
# Single-module package — tells setuptools to install tensor_gpu_v2.py directly.
# After the planned file split this becomes:
#   [tool.setuptools.packages.find]
#   where = ["."]
py-modules = ["tensor_gpu_v2"]
